--- a/mod_2_sol/index.html
+++ b/mod_2_sol/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<title>Page Title</title>
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<title>Assignment Solution for Module 2</title>
+    	<link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-    	<h1> Hello World </h1>
+    	<h1> Our Menu </h1>
+    	<div class="row">
+		  	<div class="col-lg-4 col-md-6 col-sm-12">
+		  		<div class="box">
+		  			<p class="recipe-name r1">Chicken</p>
+			  		<p class="recipe-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+			  	</div>
+		  	</div>
+
+		  	<div class="col-lg-4 col-md-6 col-sm-12">
+			  	<div class="box">
+			   		<p class="recipe-name r2">Beef</p>
+			   		<p class="recipe-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+			  	</div>
+		  	</div>
+
+		  	<div class="col-lg-4 col-md-12 col-sm-12">
+			  	<div class="box">
+			  		<p class="recipe-name r3">Sushi</p>
+			  		<p class="recipe-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+			  	</div>	
+		 	</div>
+	 	</div>
  	</body>
 </html>
